# MOFFIT-Mobile-Money-Fraud-Forensic-Investigation-Toolkit

./: .env.example  .gitignore  LICENSE  Makefile  README MIDTERM.md  README.md  USER_GUIDE.md  detection_rate.py  findings_breakdown.py  get_account.py  pyproject.toml
docs/: build_log.md
moffit/api/: main.py
moffit/api/templates/: base.html  case.html  index.html  timeline.html
moffit/cli/: main.py
moffit/custody/: case_db.py  integrity.py
moffit/detection/: detector.py  graph_builder.py  pattern_detector.py
moffit/ingestion/: paysim_loader.py
moffit/ml/: classifier.py  evaluate.py  features.py
moffit/reporting/: pdf_report.py
moffit/timeline/: generator.py  reconstructor.py
tests/: test_api.py  test_case_db.py  test_graph_builder.py  test_ingestion.py  test_integrity.py  test_ml.py  test_pattern_detector.py  test_pdf_report.py  test_timeline.py
