[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moffit"
version = "0.1.0"
description = "Mobile Money Fraud Forensic Investigation Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "rich>=13.0",
    "reportlab>=4.0",
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "typer",
    "python-dotenv",
    "pytest",
    "httpx",
    "uvicorn",
    "jinja2",
    "python-multipart"
]

[project.scripts]
moffit = "moffit.cli.main:app"
